use-cases/merged-gateway/gateways.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: team-a
---
apiVersion: v1
kind: Namespace
metadata:
  name: team-b
---
# Gateway for Team A
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: team-a-gateway
  namespace: team-a
spec:
  gatewayClassName: merged-gateway
  listeners:
  - name: http-team-a
    protocol: HTTP
    port: 18080
    hostname: "web-team-a.merged-gw.int"
  - name: api-team-a
    protocol: HTTP
    port: 18080
    hostname: "api-team-a.merged-gw.int"
---
# Gateway for Team B
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: team-b-gateway
  namespace: team-b
spec:
  gatewayClassName: merged-gateway
  listeners:
  - name: http-team-b
    protocol: HTTP
    port: 18080
    hostname: "web-team-b.merged-gw.int"
  - name: api-team-b
    protocol: HTTP
    port: 18080
    hostname: "api-team-b.merged-gw.int"
